@@ -6,10 +6,8 @@
 
   :min-lein-version "2.7.1"
 
-  :jvm-opts ["--add-modules" "java.xml.bind"]
-
   :dependencies [[org.clojure/clojure "1.9.0"]
-                 [org.clojure/clojurescript "1.9.946"]
+                 [org.clojure/clojurescript "1.10.238"]
                  [org.clojure/core.async "0.4.474"
                   :exclusions [org.clojure/tools.reader]]]
 
